fix: big gap between to rows

--- a/style.css
+++ b/style.css
@@ -176,13 +176,18 @@ html {
   gap: 2rem;
   flex-grow: 0;
   align-items: start;
+  align-content: start;
 }
 
 .card > h2 {
   font-size: 2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card {
+  width: 16rem;
+  white-space: nowrap;
   padding: 2rem;
   border: 2px solid black;
 }
